# DS2OS-Anomaly-Detection

./: .gitignore  0- Data_Pretraitement.ipynb  1- Random_Forest_Model.ipynb  2- SVM_model.ipynb  3- DNN_model.ipynb  README.md  pyproject.toml  requirements.txt
